<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey_light"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edtOldPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:hint="@string/OldPassword"
            android:inputType="textPassword|textNoSuggestions"
            android:padding="10dp"
            android:text="1234"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:hint="@string/NewPassowrd"
            android:inputType="textPassword|textNoSuggestions"
            android:padding="10dp"
            android:text="1234"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword|textNoSuggestions"
            android:padding="10dp"
            android:text="1234"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/bttSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="#4d4d4d"
        android:padding="10dp"
        android:text="@string/Save"
        android:textColor="#ffffff" />

</RelativeLayout>